--- a/style.css
+++ b/style.css
@@ -1,17 +1,59 @@
 body {
     background-color: rgb(146, 189, 202);
+    margin: 5%;
+    padding: 10%;
+    border: 2cap;
 }
-div.text {
-    
-  }
+
 div.list{
     font: italic small-caps bold 12px/30px Georgia, serif;
+    text-transform: uppercase;
+    text-indent: 1%;
+    text-decoration: underline;
+
 }
-main div {
-    background-color: sandybrown;
-    color: #443322;
-    border: 2px solid orange;
+div.table {
+    color: black;
+    text-align: center;
+    background: rgb(110, 161, 138) url("https://brand.riotgames.com/static/a91000434ed683358004b85c95d43ce0/8a20a/lol-logo.png") no-repeat  right;
+    background-size: 300px 250px;
 }
+
+
 div.text {
-    border: 3px solid violet;
+    border: 3px solid rgb(110, 161, 138);
+    line-height: 150%;
+
 }
+div.title {
+    text-align: center;
+    font-size: 30px;
+}
+
+a:hover {
+    color: #2980B9;
+    text-decoration: underline;
+}
+
+.button {
+    background-color: #156648;
+    border: none;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 12px;
+  }
+  
+  .button {
+    background-color: #156648; 
+    color: black; 
+    border: 2px solid black;
+  }
+  
+  .button:hover {
+    background-color: #209b6e;
+    color: black;
+  }
