--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(146, 189, 202);
+    background-color: rgb(33, 114, 114);
     margin: 5%;
     padding: 10%;
     border: 2cap;
@@ -13,10 +13,14 @@ div.list{
 
 }
 div.table {
-    color: black;
+    color: rgb(177, 177, 177);
     text-align: center;
-    background: rgb(110, 161, 138) url("https://brand.riotgames.com/static/a91000434ed683358004b85c95d43ce0/8a20a/lol-logo.png") no-repeat  right;
-    background-size: 300px 250px;
+    background: rgb(110, 161, 138) url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcHiRDsweok5iRwJdPzqr6T6zG9WJNmzdeNA&s") no-repeat;
+    background-size: cover;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    
 }
 
 
@@ -27,7 +31,6 @@ div.text {
 }
 div.title {
     text-align: center;
-    font-size: 30px;
 }
 
 a:hover {
@@ -45,11 +48,6 @@ a:hover {
     transition-duration: 0.4s;
     cursor: pointer;
     border-radius: 12px;
-  }
-  
-  .button {
-    background-color: #156648; 
-    color: black; 
     border: 2px solid black;
   }
   
@@ -57,3 +55,31 @@ a:hover {
     background-color: #209b6e;
     color: black;
   }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+@media screen and (max-width: 1200px) {
+    .container {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    div.table {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    div.table {
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+    }
+}
